fix margin, maintain consistent spacing

--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -78,7 +78,7 @@ $card-height: 200px;
     .PostWrapper {
       font-family: $primary-font-family;
       max-width: 100%;
-      margin: 25px auto;
+      margin: 25px;
 
       .PostTitle {
         font-size: $font-size-h3;
